# gifcolormap

./: .gitignore  Makefile.am  README.md  configure.ac
src/: gifcolormap.c
